Fixed bootstrap navbar to collapse for mobile

--- a/style.scss
+++ b/style.scss
@@ -1,37 +1,11 @@
 $color: black;
 
-@media (min-width:500px) {
-    /*ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-    }
-    
-    li a {
-        float: left;
-        display: block;
-        padding: 14px 16px;
-        color: white;
-        text-align: center;
-        text-decoration: none;
-    }
-    
-    li a:hover {
-        background-color: #111;
-    }
-    
-    .active {
-        background-color: #04aa6d;
-    }*/
-
+@media (min-width:600px) {
     body {
         padding: 4px;
     }
-
 }
 
-@media (max-width:499px) {
+@media (max-width:599px) {
 
 }
